Add initial readme
Signed-off-by: Andreas Pieber <anpieber@gmail.com>

--- a/README
+++ b/README
@@ -1,3 +1,45 @@
+OSGI MANUAL
+============
+
+* mvn install in the root of the wicket-osgi branch
+* Download karaf 2.2.5 (karaf.apache.org)
+* unzip|tar the package
+* exec bin/karaf.bat | bin/karaf
+* exec "features:install war" in the karaf console
+* install and start the wicket bundles in the karaf console:
+** install mvn:org.apache.wicket/wicket-util/6.0-SNAPSHOT
+** install mvn:org.apache.wicket/wicket-request/6.0-SNAPSHOT
+** install mvn:org.apache.wicket/wicket-core/6.0-SNAPSHOT
+** install mvn:org.apache.wicket/wicket-osgi/6.0-SNAPSHOT
+* now list the bundles using "la"
+* start the bundles using "start BUNDLE_ID_FOR_UTIL BUNDLE_ID_FOR_REQUEST ..."
+* la should show now all to started
+* create a quickstart
+* change the quickstart to WAB... therefore:
+** change packaging to bundle
+** add wicket-osgi dependency
+** move the CONTENT of the webapp folder to src/main/resources
+** add the bundle metadata:
+
+<plugin>
+  <groupId>org.apache.felix</groupId>
+  <artifactId>maven-bundle-plugin</artifactId>
+  <extensions>true</extensions>
+  <configuration>
+    <instructions>
+      <Web-ContextPath>/library</Web-ContextPath>
+      <Import-Package>
+        <-- Following semvers here we're require the feature set of at least 6.0 (or 6.1, ...) and max till 7 -->
+        org.apache.wicket.osgi;version="(6.0,7]",
+        org.apache.wicket.*;version="(6.0,7]",
+        *
+      </Import-Package>
+    </instructions>
+  </configuration>
+</plugin>
+
+** compile and install/start your bundle again using install mvn:... and start BUNDLE_ID
+
 Apache Wicket 1.5
 =================
 
